code/tui/src/app/snapshots/app__state__tests__xai_subscription_device_login.snap
---
source: code/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                                [Dashboard]

            ┌── Config › Super Grok ───────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> Browser opened  ·  https://auth.x.ai/device                         │
            │  Enter code  ·  XAI-1234                                             │
            │  Cancel sign-in                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ──────────│  Esc to return                                                       │──────────
  > Build an└──────────────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────────────────────── Automatic model
