code/tui/src/app/snapshots/app__state__tests__xai_subscription_plan.snap
---
source: code/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                        [— / —] [Dashboard]

            ┌── Config › Super Grok ───────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> Account  ·  ada@example.test                                        │
            │  Plan  ·  SuperGrok Heavy                                            │
            │                                                                      │
            │  Models ──────────────────────────────────────────────────────────── │
            │  Grok Account Model                                                  │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ╭─────────│  Esc to return  ·  l to sign out                                     │─────────╮
  │ > Build └──────────────────────────────────────────────────────────────────────┘         │
  ╰──────────────────────────────────────────────────────────────────────── Automatic model ─╯
