code/tui/src/app/snapshots/app__state__tests__zai_subscription_key_prompt.snap
---
source: code/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                        [— / —] [Dashboard]

            ┌── BigModel › API key ────────────────────────────────────────────[✗]─┐
            │                                                                      │
            │  Enter the API key from your BigModel Coding Plan                    │
            │  ╭─────────────────────────────────────────────────────────────────╮ │
            │  │ ••••••••••••••                                                  │ │
            │  ╰─────────────────────────────────────────────────────────────────╯ │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ╭─────────│  Enter to save  ·  Esc to cancel                                     │─────────╮
  │ > Build └──────────────────────────────────────────────────────────────────────┘         │
  ╰──────────────────────────────────────────────────────────────────────── Automatic model ─╯
