code/tui/src/app/snapshots/app__state__tests__zai_subscription_sign_in.snap
---
source: code/tui/src/app/state_tests.rs
expression: "crate::app::usage_tests::render(&app, 96, 24)"
---
  .                                                                        [— / —] [Dashboard]

            ┌── Config › zai ──────────────────────────────────────────────────[✗]─┐
            │                                                                      │
            │   Status                                                             │
            │                                                                      │
            │> API key not saved                                                   │
            │  Sign in with zai                                                    │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ╭─────────│  Tab/Shift+Tab to switch  ·  Esc to return                           │─────────╮
  │ > Build └──────────────────────────────────────────────────────────────────────┘         │
  ╰──────────────────────────────────────────────────────────────────────── Automatic model ─╯
